# trade-bot

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml
.claude/: settings.json
.claude/commands/: analyze.md  audit.md  check.md  deploy.md  implement.md  trade-review.md
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/analysis/: engine.py  signals.py  trend_filter.py
backend/app/analysis/indicators/: basic.py  elliott.py  fibonacci.py  volume.py
backend/app/api/: router.py
backend/app/api/routes/: analysis.py  health.py  market.py  trading.py
backend/app/binance/: client.py  kline_store.py  schemas.py  ws_consumer.py
backend/app/db/: repository.py  session.py
backend/app/models/: kline.py
backend/app/tasks/: scheduler.py
backend/app/trading/: alert_sender.py  anomaly_detector.py  engine.py  live_engine.py  persistence.py  schemas.py  telegram_bot.py
backend/app/ws/: manager.py  server.py
docs/meeting-minutes/: 2026-04-08-buffett-dimon-final.md  2026-04-08-buffett-dimon-sl-confirmation.md  2026-04-08-buffett-dimon-sl-daily.md  2026-04-08-donald-norman-ux-review.md  2026-04-09-buffett-dimon-auto-halt-rules.md  2026-04-09-buffett-dimon-execution-architecture.md  2026-04-09-buffett-dimon-final-rebuttal.md  2026-04-09-buffett-dimon-real-account.md  2026-04-09-buffett-dimon-streak-rules.md  2026-04-10-buffett-dimon-aggressive-style.md  (+20 more)
frontend/: Dockerfile  package.json  pnpm-lock.yaml
scripts/: backtest.py  seed_data.py  setup.sh
(+30 files in other folders)
