[project]
name = "trade-bot-backend"
version = "0.1.0"
description = "Binance Bitcoin Futures Trading Analysis Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic-settings>=2.7.0",
    "pandas>=2.2.0",
    "numpy>=2.1.0",
    "ta>=0.11.0",
    "scipy>=1.14.0",
    "apscheduler>=3.11.0",
    "websockets>=14.0",
    "httpx>=0.28.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
